public/css/resume.css
.resume {width: 850px;}

body {
  min-width: 1000px;
}


.resume {font-family: "Merriweather", "Average", "Georgia", serif;}

ul, ol, li {list-style-type: none;}
h1,h2,h3,h4,h5,h6 {font-weight: normal;}

body {background-color: #f5f5f5; color: #151515;}
a {color: rgb(0, 53, 102);}



.resume {line-height: 25px;}
.resume h1 {font-size: 20pt; line-height: 40px;}
.resume h2, .resume h3 {font-size: 16pt; line-height: 32px;}
.resume h4 {font-style: italic;}

.resume,
.resume h4,
.resume ul li {font-size: 10pt;}

.resume .summary {font-size: 12pt; line-height: 30px;}
.resume .before ul li {line-height: 25px;}

/** Main structure **/

header.main, footer.main {display: none;}
div.main {margin-top: 20px;}

.resume p {margin: 5px 0 10px 0;}

article pre {
  white-space: pre-wrap;
  font-family: inherit;
}


.resume {margin: 0 auto;}
.resume ul li {width: 390px;}
/*.resume .personal ul li,*/
.resume .before ul li {width: 815px; margin: 7px 0;}
.resume td {width: 425px;}
.resume td.right {padding-left: 20px;}

.resume section h2 .date,
.resume section h3 .date {
  color: #888; display: inline-block; margin-left: 10px;
  font-size: 90%;
}

.resume ol, .resume ul {
  list-style-position: outside;
}

.resume ol li, .resume ul li {margin-top: 10px; margin-bottom: 15px;}
.resume ul, .resume ul li {list-style-type: none;}
.resume ol, .resume ol li {list-style-type: decimal;}

.resume ul {margin-top: 10px;}
.resume ul li {line-height: 19px; padding-left: 15px;}

/** section-specific **/

.resume .contact {position: relative;}

.resume .contact ul {
  margin-top: 7px; margin-left: 20px;
  display: inline-block;
  position: absolute;
  top: auto; right: auto;
}
.resume .contact h1 {display: inline-block;}
.resume .contact ul li {
  display: inline-block;
  margin: 0 20px 0 0;
  padding: 0;
  width: auto;
  font-size: 12pt;
}

.resume .sunlight ul {margin-top: 0px;}
.resume .personal ul li,
.resume section ul li {line-height: 25px;}

.resume .summary {padding: 20px 0;}
.resume .eighteen-f {margin-top: 0px;}

/*.resume .eighteen-f p {margin: 5px 0 5px 0}*/

.sunlight {margin-top: 35px;}
.sunlight, .work {margin-bottom: 25px;}
.before {margin-bottom: 35px;}
.sunlight table td {padding-bottom: 10px;}

.thoughtbot p {padding-right: 20px;}
.thoughtbot p, .bsd p {line-height: 25px;}
.resume .bsd ul,
.resume .bsd ul li,
.resume .thoughtbot ul,
.resume .thoughtbot ul li {xlist-style-type: disc; }

/* Some real basic mobile-friendliness */

@media (max-width: 600px)  {
  body {min-width: 100%;}

  .resume {
    width: inherit;
    padding-left: 10px; padding-right: 5px;
  }

  .resume ul li,
  .resume .personal ul li,
  .resume .before ul li,
  .resume td {width: inherit;}

  .resume .contact {
    position: static;
  }
  .resume .contact li.other {display: none;}

  .resume .contact ul {
    margin: 0;
    display: block;
    position: static;
  }
  .resume .contact h1 {
    display: block;
  }

  .resume .contact ul li {
    display: block;
    margin: 4px 2px;
  }

  .resume, .resume * ul li {
    line-height: 23px !important;
  }

  .resume * ul li {
    padding-top: 5px; padding-bottom: 5px;
    margin-top: 0px; margin-bottom: 0px;
  }

}


@media print {
  .noprint {display: none;}

  body {background-color: #fff; color: #151515;}

  .resume section h2 .date, .resume section h3 .date {
    color: #252525;
  }

  .sunlight {margin-top: 15px;}
  .sunlight, .work {margin-bottom: 5px;}
  /*.personal {margin-bottom: 0px;}*/

  .resume .summary {
    line-height: 32px; letter-spacing: 0.5px; font-size: 16pt;
    padding: 10px 0;
  }
}

.meta {border-bottom: 1px solid #aaa;}
.meta span {display: inline-block; margin-right: 50px;}

